Make sure WIP notice is visible on goupile.fr

--- a/src/sites/goupile.fr/static/goupile.fr.css
+++ b/src/sites/goupile.fr/static/goupile.fr.css
@@ -223,11 +223,15 @@ main {
 }
 
 #wip {
-    float: right;
-    color: red;
-    font-size: 1.1em;
-    font-weight: bold;
+    position: fixed;
+    top: 3em;
+    left: 870px;
     margin-top: -12px;
+    padding: 4px;
+    background: red;
+    color: white;
+    font-size: 1.3em;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 580px) {
